--- a/trunk/.htaccess
+++ b/trunk/.htaccess
@@ -2,8 +2,7 @@
 RewriteEngine On
 
 # Installation directory
-# Remember to set this according to the real directory later !!
-RewriteBase /cms/
+RewriteBase /
 
 # Protect hidden files from being viewed
 <Files .*>
@@ -12,11 +11,13 @@ RewriteBase /cms/
 </Files>
 
 # Protect application and system files from being viewed
-RewriteRule ^(?:application|modules|system)\b.* index.php/$0 [L]
+#RewriteRule ^(?:application|modules|system)\b.* index.php/$0 [L]
+RewriteRule ^(application|modules|system)/ - [F,L]
 
 # Allow any files or directories that exist to be displayed directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 # Rewrite all other URLs to index.php/URL
-RewriteRule .* index.php/$0 [PT]
+#RewriteRule .* index.php/$0 [PT]
+RewriteRule .* index.php [L]
